styles.css
html{
    font-size: 12px;
    color: whitesmoke;
    font-family: 'Ubuntu', sans-serif;
    box-sizing: border-box;
}
body{
    background-image: url("./assets/images/background.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100svh;
    max-width: 100svw;
    margin: 0;
    padding: 0;
}
.wrapper{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
}

/* Javascript classes */
.hidden{
    display: none;
}

/* Main section */
main{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 0rem;
}

.header-container{
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 7rem 0rem;
}
.header-container .title{
    display: flex;
    align-items: center;
}
.title p {
    align-self: center;
    font-size: 5rem;
} 
.header-container .fa-facebook, .header-container .fa-instagram{
    font-size: 5rem;

    transition-property: color;
    transition-duration: .15s;
    transition-timing-function: linear;
}
.header-container .fa-facebook:hover, .header-container .fa-instagram:hover{
    color: #b0ebfe90;
}
.header-container .fa-facebook, .header-container .fa-instagram{
    color: white;
}
.title .mozuweb{
    height: auto;
    width: 14rem;
    border-radius: 50%;
}

/* Card container */
fieldset{
    padding: 3rem;
    border: none;
}
.cards{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 2rem;
}
.card{
    background-color: #1e3b5d70;
    backdrop-filter: blur(0.3rem);
    box-shadow: rgba(0, 0, 0, 0.4) 0px 4px 12px, rgba(0, 0, 0, 0.3) 0px 14px 26px -6px, rgba(0, 0, 0, 0.2) 2px 0px 4px inset; 
    width: 30rem;
    cursor: pointer;
    border-radius: 8px;

    transition-property: background-color;
    transition-duration: .25s;
    transition-timing-function: linear;

    display: flex;
    flex-direction: column;
}
.card > * {
    padding: 0.5rem 2rem;
    margin: 0;
}
/* Card on hover effects */
.card:hover{
    background-color: #1e3b5d;
}
.card .header{
    display: flex;
    align-items: center;
    justify-content: space-between;
    color: #b0ebfe;
}
.card .header h2{
    font-weight: normal;
    font-size: 2.5rem;
}
.card .content{
    font-size: 1.5rem;
    font-weight: normal;
    display: flex;
    text-align: left;
}
.card .content p{
    line-height: 1.4;
    margin: 0;
    font-size: 1.6rem;
    color: #b0ebfe90;
}
.card .content .description-hidden{
    display: none;
}
.card .footer{
    color: #b0ebfe;
    font-size: 2.5rem;
}

/* Form page */
form{
    min-width: 100%;
}
form ul{
    list-style: none;
    padding: 2rem;
}
form li{
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1rem;
}
.list-item{
    display: flex;
    align-items: center;
    
    background-color:#19324f;
    box-shadow: rgba(0, 0, 0, 0.4) 0px 4px 12px, rgba(0, 0, 0, 0.3) 0px 14px 26px -6px, rgba(0, 0, 0, 0.2) 2px 0px 4px inset; 
    border: none;
    border-radius: 0.4rem;
    font-size: 2rem;
}
.list-item input{
    flex-grow: 1;
}
.list-item i{
    padding: 0.5rem;
    color: #b0ebfe;
}
form li input, form li textarea{
    color: #b0ebfe; 
}
form ul .buttons{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
button{
    background-color: #060f1e90;
    border-radius: 8px;
    font-size: 2rem;
    color: #b0ebfe;
    width: fit-content;
    padding: 0.5rem;
    align-self: center;
    border: solid 0.15rem #b0ebfe;
    cursor: pointer;

    transition-property: color, background-color;
    transition-duration: 0.15s;
    transition-timing-function: linear;
}
.a-return{
    text-decoration: none;
    color: #b0ebfe;
    padding: 0.1rem;

    transition-property: color;
    transition-duration: 0.15s;
    transition-timing-function: linear;
}
button:hover{
    color: #060f1e90;
    background-color: #b0ebfe;
}
.btn-return:hover .a-return{
    color: #060f1e90;
}
textarea{
    border-radius: 8px;
    vertical-align: top;
    height: 5em;
}
input, textarea{
    background-color: #55687930;
    border: none;
    padding: 0.5rem;
    border-top-right-radius: 0.4rem;
    border-bottom-right-radius: 0.4rem;
    font-size: 2rem;
    outline: none;
}
::placeholder, #plan_name{
    color: #b0ebfe50;
}


/* Mobile device screen */

@media (max-width:768px){
    .header-container{
        margin: 0rem 0rem;
    }

    .header-container .fa-facebook, .header-container .fa-instagram{
        font-size: 3rem;
    }
    .title .mozuweb{
        height: 6rem;
        width: auto;
    }
    .title p {
        align-self: center;
        font-size: 3rem;
    } 
    .cards{
        gap: 1.5rem;
    }
    .card{
        background-color:#1e3b5d95;
        max-width: 25rem;
    }
    .card .header h2, .card .footer{
        font-size: 2rem;
    }
    .card .content p{
        line-height: 1.3;
        font-size: 1.4rem;
 
    }
    fieldset{
        padding: 0;
    }
    .card .footer{
        outline: none;
    }
    /* form */
    input, textarea{
        font-size: 1.5rem;
    }
    button{
        font-size: 1.5rem;
    }
    /* Card on hover effects */
    .card:hover{
        box-shadow: none;
    }
}

